--- a/stroke_prediction.ipynb
+++ b/stroke_prediction.ipynb
@@ -81,7 +81,7 @@
       "source": [
         "#Introduction\n",
         "According to the World Health Organization (WHO) stroke is the 2nd leading cause of death globally, responsible for approximately 11% of total deaths.\n",
-        "This dataset is used to predict whether a patient is likely to get stroke based on the input parameters like gender, age, various diseases, and smoking status."
+        "This model is used to predict whether a patient is likely to get stroke based on the input parameters like gender, age, various diseases, and smoking status."
       ]
     },
     {
